--- a/src/ProjectTemplates/MauiBlazorApp/MauiBlazorApp.WinUI/Properties/launchSettings.json
+++ b/src/ProjectTemplates/MauiBlazorApp/MauiBlazorApp.WinUI/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "$ext_safeprojectname$.WinUI": {
-      "commandName": "MsixPackage"
+      "commandName": "MsixPackage",
+      "nativeDebugging": false
     }
   }
 }
