.NET MAUI CLI Templates

--- a/src/ItemTemplates/MauiTemplatesCLI/VijayAnand.MauiTemplates.csproj
+++ b/src/ItemTemplates/MauiTemplatesCLI/VijayAnand.MauiTemplates.csproj
@@ -2,11 +2,11 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<PackageType>Template</PackageType>
-		<PackageId>VijayAnand.MauiPage</PackageId>
-		<PackageVersion>1.0.1</PackageVersion>
-		<Title>.NET MAUI ContentPage</Title>
+		<PackageId>VijayAnand.MauiTemplates</PackageId>
+		<PackageVersion>1.0.0</PackageVersion>
+		<Title>.NET MAUI Item Templates</Title>
 		<Authors>Vijay Anand E G</Authors>
-		<Description>Item template for creating a .NET MAUI ContentPage in XAML</Description>
+		<Description>Item templates for creating a .NET MAUI ContentPage and ContentView in XAML</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<IncludeContentInPack>true</IncludeContentInPack>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
@@ -14,14 +14,14 @@
 		<ContentTargetFolders>Content</ContentTargetFolders>
 		<!-- This project has no .NET assemblies, so disable the warning for that -->
 		<NoWarn>$(NoWarn);NU5128</NoWarn>
-		<RepositoryType>github</RepositoryType>
+		<RepositoryType>git</RepositoryType>
 		<RepositoryUrl>https://github.com/egvijayanand/dotnet-maui-templates</RepositoryUrl>
-		<PackageTags>MAUI, Mobile, iOS, Android, WinUI3, MacCatalyst</PackageTags>
+		<PackageTags>MAUI, Mobile, iOS, Android, WinUI3, Mac Catalyst, macOS, VS Code, .NET MAUI, Desktop, Windows, WinUI, Preview 7, Templates</PackageTags>
 		<PackageReleaseNotes>$([System.IO.File]::ReadAllText("$(MSBuildProjectDirectory)/release-notes.txt"))</PackageReleaseNotes>
 	</PropertyGroup>
 	<ItemGroup>
-		<Content Include="MauiPage\**\*"
-		         Exclude="MauiPage\**\bin\**;MauiPage\**\obj\**"/>
+		<Content Include="MauiPage\**\*;MauiView\**\*"
+		         Exclude="MauiPage\**\bin\**;MauiPage\**\obj\**;MauiView\**\bin\**;MauiView\**\obj\**"/>
 		<Compile Remove="**\*"/>
 	</ItemGroup>
 </Project>
