.NET MAUI Preview 8 Release

--- a/src/ProjectTemplates/MauiApp/MauiApp/Properties/launchSettings.json
+++ b/src/ProjectTemplates/MauiApp/MauiApp/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "$ext_safeprojectname$.WinUI": {
+    "Windows Machine": {
       "commandName": "MsixPackage",
-	  "nativeDebugging": false
+      "nativeDebugging": false
     }
   }
 }
