--- a/src/Extensions/MauiTemplates/MauiTemplates/MauiTemplates.csproj
+++ b/src/Extensions/MauiTemplates/MauiTemplates/MauiTemplates.csproj
@@ -226,6 +226,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="ItemTemplates\MauiResDictXaml.zip">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <VSIXSubPath>ItemTemplates\MAUI</VSIXSubPath>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
       <Generator>VsixManifestGenerator</Generator>
