--- a/src/ItemTemplates/MauiTemplatesCLI/VijayAnand.MauiTemplates.csproj
+++ b/src/ItemTemplates/MauiTemplatesCLI/VijayAnand.MauiTemplates.csproj
@@ -5,7 +5,7 @@
         <!-- Package Options -->
         <PackageType>Template</PackageType>
         <PackageId>VijayAnand.MauiTemplates</PackageId>
-        <PackageVersion>1.0.6</PackageVersion>
+        <PackageVersion>1.0.0</PackageVersion>
         <Title>.NET MAUI Templates</Title>
         <Authors>Vijay Anand E G</Authors>
         <Copyright>Copyright &#169; 2022 Vijay Anand E G</Copyright>
@@ -27,7 +27,7 @@
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
     </PropertyGroup>
     <ItemGroup>
-        <Content Include="MauiPage\**\*;MauiView\**\*;MauiShell\**\*;MauiClassLib\**\*"
+        <Content Include="MauiPage\**\*;MauiPageCS\**\*;MauiView\**\*;MauiViewCS\**\*;MauiShell\**\*;MauiClassLib\**\*"
                  Exclude="**\bin\**;**\obj\**;**\ide\*"/>
         <Compile Remove="**\*"/>
         <None Include="overview.md" Pack="true" PackagePath="\" />
