--- a/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.csproj
+++ b/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.csproj
@@ -20,12 +20,16 @@
         <!-- Minimum Target OS Version for Windows Platform -->
         <TargetPlatformMinVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.17763.0</TargetPlatformMinVersion>
     </PropertyGroup>
-    <ItemGroup Condition="'$(AddToolkitPackage)' == 'True' OR '$(AddMarkupPackage)' == 'True'">
+    <!--#if (AddToolkitPackage || AddMarkupPackage)-->
+    <ItemGroup>
+    <!--#endif-->
         <!--#if (AddToolkitPackage)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="1.0.0-pre6"/>
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.0.0-pre5"/>
-        <!--#endif -->
+        <!--#endif-->
+    <!--#if (AddToolkitPackage || AddMarkupPackage)-->
     </ItemGroup>
+    <!--#endif-->
 </Project>
