.NET MAUI-themed branding icon and App flow update

--- a/src/MauiTemplatesCLI/VijayAnand.MauiTemplates.csproj
+++ b/src/MauiTemplatesCLI/VijayAnand.MauiTemplates.csproj
@@ -28,7 +28,7 @@
     </PropertyGroup>
     <ItemGroup>
         <Content Include="MauiPage\**\*;MauiPageCS\**\*;MauiView\**\*;MauiViewCS\**\*;MauiShell\**\*;MauiClassLib\**\*;MauiAppX\**\*"
-                 Exclude="**\bin\**;**\obj\**;**\ide\*"/>
+                 Exclude="**\bin\**;**\obj\**"/>
         <Compile Remove="**\*"/>
         <None Include="overview.md" Pack="true" PackagePath="\" />
     </ItemGroup>
